--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <div class="card-body">
                     <div class="row no-gutters">
                         <div class="col">
-                            <h3 class="card-title m-0"><span id="answerField">Вы загадали число 5?</span></h3>
+                            <h3 class="card-title m-0"><span id="answerField">Вы загадали число ?</span></h3>
                         </div>
                     </div>
                 </div>
                 <div class="card-body">
                     <div class="btn-group">
-                        <button class="btn btn-info" id="btnLess">&#129047;<br>меньше</button>
+                        <button class="btn btn-info" id="btnLess">&#129047;<br>Меньше</button>
                         <button class="btn btn-success btn-lg" id="btnEqual">Верно!</button>
-                        <button class="btn btn-info" id="btnOver">больше<br>&#129045;</button><hr>
+                        <button class="btn btn-info" id="btnOver">Больше<br>&#129045;</button><hr>
                     </div>
                 </div>
                 <div class="card-footer">
